# AIE3

./: README.md
Demo Day/backend/: pyproject.toml  test.ipynb
Demo Day/backend/financial_chat/: chunk_load.py  fetch_documents.py  graph.py  prompts.py  schema.py  supabase_client.py  types_.py
Demo Day/backend/financial_chat/nodes/: generator.py  report_params_generator.py  retriever.py
Demo Day/backend/tests/: test_chunk_load.py  test_fetch_documents.py  test_generator.py  test_report_params_generator.py  test_retriever.py
Midterm Project/backend/: .gitignore  Dockerfile  README.md  app.py  chainlit.md  config.py  crag.ipynb  generator.py  grader.py  graph.py  requirements.txt  retriever.py  rewriter.py  server.py  starters.py
Notes/LLM Evals/: .env.example  Running LangSmith Evals.ipynb  evals.md
Notes/Langchain Primer/: Langchain.md
Week 1/Day 1/: Streamlit API cheat sheet - Streamlit Docs.html
Week 1/Day 2/: Accessing_OpenAI_Like_a_Developer_AIMS_(Assignment_Version).ipynb
Week 2/Day 1/: Pythonic_RAG_Assignment.ipynb
Week 2/Day 2/: OpenAI_Assistants_Building_Agentic_RAG_with_Function_Calling_API_and_Retrieval.ipynb
Week 3/Day 1/: w3d1-fine-tuning-llama-3-8b.ipynb
Week 3/Day 2/: Assignment_Introduction_to_LangChain_v0_2_0_and_LCEL_LangChain_Powered_RAG.ipynb
Week 4/Day 1/: Dockerfile  Open_Source_RAG_Leveraging_Hugging_Face_Endpoints_through_LangChain.ipynb  README.md  app.py  chainlit.md
Week 4/Day 2/: Evaluation_of_RAG_using_Ragas_Assignment_Notebook.ipynb
Week 5/Day 1/: Building_Advanced_RAG_with_LlamaIndex_Assignment_Version.ipynb
(+27 files in other folders)
